--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,7 @@ commands =
         partial: --only-changes-to \
         partial: {env:RESOLWE_TEST_ONLY_CHANGES_TO:master} \
         partial: --changes-file-types .resolwebio-filetypes.yml \
-    --verbosity 2 --parallel
+    --verbosity 2 --parallel --keep-data
 
 # Check types.
 [testenv:mypy]
